# rusty-client

./: .gitignore  package.json
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: app-icon.pdn  icon.icns
src-tauri/src/: commands.rs  main.rs  menu.rs  shortcuts.rs
